--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll-parallax": "^3.2.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "web-vitals": "^2.1.4"
